个人项目,写一写自动化或小工具